* Fri Jul 27 2018 Brandon Ess <brandon.ess@gmail.com> - 8.0.3-0
- Align group ownership of the auditd log directories with the setting for
  auditd itself so that the designated group can access the log files.

* Fri Jul 13 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.0.2-0
- Updated to work with Puppet 5 and OEL

* Fri Jul 06 2018 Trey Dockendorf <tdockendorf@osc.edu> - 8.0.1-0
- Allow lowercase values for several parameters in accordance with the man
  pages and SCAP expectations.

* Thu Jun 21 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 8.0.0-0
- Added ability to select one or more audit profiles.  When multiple
  profiles are selected, their rules are effectively concatenated in
  the order in which the profiles are listed in
  auditd::default_audit_profiles.
- The following API Changes were made in support of multiple audit
  profiles:
  - $::auditd::$default_audit_profile has been deprecated by
    $::auditd::$default_audit_profiles
  - auditd::config and auditd::config::audit_profiles::simp classes are
    now private.  In the unlikely event that you included just these
    classes in your manifest, you must now include auditd instead.
  - The following auditctl global configuration options that were in
    auditd::config::audit_profiles::simp are now in the auditd class,
    instead: $ignore_errors, $ignore_anonymous, $ignore_system_services,
    and $ignore_crond. They were moved because they are now applied to
    the set of audit profiles selected, not just the 'simp' audit
    profile.
  - The following auditd::config::audit_profiles::simp class parameters
    have been deprecated for clarity:
    - $audit_sudoers has been deprecated by $audit_cfg_sudoers
    - $audit_sudoers_tag has been deprecated by $audit_cfg_sudoers
    - $audit_grub has been deprecated by $audit_cfg_grub
    - $audit_grub_tag has been deprecated by $audit_cfg_grub_tag
    - $audit_yum has been deprecated by $audit_cfg_yum